src/test/ui/never_type/fallback-closure-ret.stderr
error[E0277]: the trait bound `!: Bar` is not satisfied
  --> $DIR/fallback-closure-ret.rs:19:5
   |
LL |     foo(|| panic!());
   |     ^^^ the trait `Bar` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?
note: required by a bound in `foo`
  --> $DIR/fallback-closure-ret.rs:16:11
   |
LL | fn foo<R: Bar>(_: impl Fn() -> R) {}
   |           ^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
